# esp-hal

./: CHANGELOG.md
.github/actions/check-esp-hal/: action.yml
.github/workflows/: ci.yml  hil.yml
esp-hal/: CHANGELOG.md  Cargo.toml  MIGRATING-0.21.md  MIGRATING-1.0.0-beta.0.md
esp-hal-common/: Cargo.toml
esp-hal-common/src/embassy/: mod.rs
esp-hal-common/src/rtc_cntl/: mod.rs
esp-hal-embassy/: CHANGELOG.md  Cargo.toml
esp-hal-embassy/src/: time_driver.rs  timer_queue.rs
esp-hal/src/: assist_debug.rs  ecc.rs  etm.rs  hmac.rs  i2c.rs  i2s.rs  lib.rs  parl_io.rs  peripheral.rs  rmt.rs  rng.rs  sha.rs  time.rs  uart.rs  usb_serial_jtag.rs
esp-hal/src/aes/: esp32.rs  esp32cX.rs  esp32s2.rs  esp32s3.rs  mod.rs
esp-hal/src/clock/: mod.rs
esp-ieee802154/src/: hal.rs
esp-metadata/: Cargo.toml
esp-metadata-generated/src/: _build_script_utils.rs  _generated_esp32.rs  _generated_esp32c2.rs  _generated_esp32c3.rs  _generated_esp32c5.rs  _generated_esp32c6.rs  _generated_esp32c61.rs  _generated_esp32h2.rs  _generated_esp32p4.rs  _generated_esp32s2.rs  _generated_esp32s3.rs
esp-metadata/devices/: esp32.toml  esp32c2.toml  esp32c3.toml  esp32c5.toml  esp32c6.toml  esp32c61.toml  esp32h2.toml  esp32p4.toml  esp32s2.toml  esp32s3.toml
esp-metadata/src/: cfg.rs  dma.rs  lib.rs
esp-preempt/src/: run_queue.rs  scheduler.rs
esp-rtos/src/: auto_lightsleep.rs  lib.rs
esp32-hal/: Cargo.toml
esp32-hal/examples/: embassy_multicore.rs  embassy_multicore_interrupt.rs  embassy_multiprio.rs  embassy_serial.rs
esp32c2-hal/: Cargo.toml
esp32c3-hal/: Cargo.toml
esp32c6-hal/: Cargo.toml
esp32h2-hal/: Cargo.toml
esp32s2-hal/: Cargo.toml
esp32s2-hal/examples/: embassy_serial.rs
esp32s3-hal/: Cargo.toml
esp32s3-hal/examples/: embassy_serial.rs
examples/wifi/dhcp/: Cargo.toml
examples/wifi/dhcp/.cargo/: config.toml
examples/wifi/dhcp/src/: main.rs
hil-test/: Cargo.toml
hil-test/tests/: aes.rs  delay.rs  embassy_interrupt_spi_dma.rs  embassy_timers_executors.rs  gpio.rs  i2c.rs  i2s.rs  i2s_parallel.rs  init.rs  lcd_cam.rs  lcd_cam_i8080.rs  lcd_cam_i8080_async.rs  parl_io.rs  parl_io_tx.rs  parl_io_tx_async.rs  qspi.rs  rmt.rs  spi_full_duplex.rs  spi_half_duplex_read.rs  spi_half_duplex_write.rs  spi_half_duplex_write_psram.rs  spi_slave.rs  twai.rs  uart.rs  uart_async.rs
qa-test/: Cargo.toml
xtask/src/: cargo.rs  firmware.rs  lib.rs  main.rs
(+94 files in other folders)
