[package]
name    = "dhcp"
version = "0.0.0"
edition = "2024"
publish = false

[dependencies]
defmt = "1"
blocking-network-stack = { git = "https://github.com/bjoernQ/blocking-network-stack.git", default-features = false, features = ["defmt", "dhcpv4", "dns", "icmp", "ipv4", "multicast", "tcp", "udp"], rev = "b3ecefc" }
embedded-io = { version = "0.6.1", default-features = false }
esp-alloc = { path = "../../../esp-alloc" }
esp-backtrace = { path = "../../../esp-backtrace", features = [
    "panic-handler",
    "defmt",
] }
esp-bootloader-esp-idf = { path = "../../../esp-bootloader-esp-idf" }
esp-hal = { path = "../../../esp-hal", features = ["defmt", "unstable"] }
esp-println = { path = "../../../esp-println", features = ["defmt-espflash"] }
esp-preempt = { path = "../../../esp-preempt", features = [
    "defmt",
] }
esp-radio = { path = "../../../esp-radio", default-features = false, features = [
    "smoltcp",
    "unstable",
    "wifi",
    "defmt"
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
    "medium-ethernet",
    "socket-raw",
] }

[features]
esp32 = [
    "esp-backtrace/esp32",
    "esp-println/esp32",
    "esp-bootloader-esp-idf/esp32",
    "esp-hal/esp32",
    "esp-preempt/esp32",
    "esp-radio/esp32",
]
esp32c2 = [
    "esp-backtrace/esp32c2",
    "esp-println/esp32c2",
    "esp-bootloader-esp-idf/esp32c2",
    "esp-hal/esp32c2",
    "esp-preempt/esp32c2",
    "esp-radio/esp32c2",
]
esp32c3 = [
    "esp-backtrace/esp32c3",
    "esp-println/esp32c3",
    "esp-bootloader-esp-idf/esp32c3",
    "esp-hal/esp32c3",
    "esp-preempt/esp32c3",
    "esp-radio/esp32c3",
]
esp32c6 = [
    "esp-backtrace/esp32c6",
    "esp-println/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-hal/esp32c6",
    "esp-preempt/esp32c6",
    "esp-radio/esp32c6",
]
esp32s2 = [
    "esp-backtrace/esp32s2",
    "esp-println/esp32s2",
    "esp-bootloader-esp-idf/esp32s2",
    "esp-hal/esp32s2",
    "esp-preempt/esp32s2",
    "esp-radio/esp32s2",
]
esp32s3 = [
    "esp-backtrace/esp32s3",
    "esp-println/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-hal/esp32s3",
    "esp-preempt/esp32s3",
    "esp-radio/esp32s3",
]

[profile.release]
debug            = true
debug-assertions = true
lto              = "fat"
codegen-units    = 1
